SC-1820 : runtimeException fix