@@ -291,7 +291,16 @@
                     <artifactId>maven-checkstyle-plugin</artifactId>
                     <version>2.17</version>
                 </plugin>
-
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M4</version>
+                    <configuration>
+                        <argLine>
+                            --illegal-access=warn
+                        </argLine>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
 
